test/fail_compilation/fail325.d
void fun(T=int)(int w, int z) {}

void main() {
    auto x = cast(void function(int, int))fun;
}

